# content-tracker

.claude/: .settings.json  CLAUDE.md  settings.json
.claude/agents/: api-contract-extractor.md  seed-data.extractor.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: fa50b41778c0_create_tasks_table.py
backend/app/: database.py  main.py
backend/app/api/v1/: tasks.py
backend/app/core/: config.py
backend/app/models/: __init__.py  task.py
backend/app/schemas/: task.py
backend/app/services/: task_service.py
frontend/: app.js  index.html  styles.css
specs/: api-contract.md  seed-data.json
